--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .h-screen {
+    height: calc(var(--vh, 1vh) * 100) !important;
+  }
+}
