--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+  .bg-gradient-primary {
+    @apply bg-gradient-to-r from-blue-400 to-pink-400;
+  }
+
   .h-screen {
     height: calc(var(--vh, 1vh) * 100) !important;
   }
